<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/darkGreenColor"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_back_rate"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:padding="16dp"
            android:src="@drawable/ic_backwhite"
            android:visibility="visible" />

    </FrameLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_store_image_route"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:src="@drawable/pictu"
        app:civ_border_color="@color/darkGreenColor"
        app:civ_border_width="2dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:paddingRight="10dp"
            android:text="@string/store_name"
            android:textColor="@color/darkGreenColor"
            android:textSize="@dimen/sixteen_dp" />

        <TextView
            android:id="@+id/tv_store_name_route"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Target"
            android:textSize="@dimen/fourteen_sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="4dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:paddingRight="10dp"
            android:text="@string/order_details_total_price"
            android:textColor="@color/darkGreenColor"
            android:textSize="@dimen/sixteen_dp" />

        <TextView
            android:id="@+id/tv_total_price_route"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="SAR 50"
            android:textSize="@dimen/fourteen_sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:paddingRight="10dp"
            android:text="@string/store_location"
            android:textColor="@color/darkGreenColor"
            android:textSize="@dimen/sixteen_dp" />

        <TextView
            android:id="@+id/tv_location_route"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Target"
            android:textSize="@dimen/fourteen_sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_route_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_submit_btn"
            android:gravity="center"
            android:paddingHorizontal="40dp"
            android:paddingRight="10dp"
            android:text="@string/route_me"
            android:textColor="@color/whiteColor"
            android:textSize="@dimen/sixteen_dp" />

        <TextView
            android:id="@+id/tv_go_to_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_home"
            android:textSize="@dimen/fourteen_sp" />
    </LinearLayout>

</LinearLayout>