<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_custom_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:background="@color/colorPrimary"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/header_item_details" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="20dp"
            android:gravity="center"
            android:text="@string/list_name_dialog_title"
            android:textColor="@color/darkGreenColor"
            android:textSize="@dimen/sixteen_sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_name_dialog_name"
                android:textColor="@color/darkGreenColor" />

            <EditText
                android:id="@+id/tv_date_in_store_purchase"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/bg_order_details"
                android:gravity="center"
                android:hint="List name"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:textColorHint="@color/darkGreenColor"
                android:textColor="@color/darkGreenColor"/>
        </LinearLayout>

        <TextView
            android:id="@+id/confirm_btn_purchasing_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/bg_submit_btn"
            android:gravity="center"
            android:text="@string/confirm_btn"
            android:textColor="@color/whiteColor" />

    </LinearLayout>

</androidx.cardview.widget.CardView>