<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_custom_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:background="@color/colorPrimary"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/header_item_details" />

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_select_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:checked="false"
                android:text="@string/select_all" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="5dp"
            android:orientation="vertical">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_filter_stores"
                android:layout_width="wrap_content"
                android:layout_height="340dp"
                android:paddingBottom="45dp"
                tools:listitem="@layout/row_items_filter_stores" />

            <LinearLayout
                android:id="@+id/progress_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/please_wait"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:textSize="@dimen/sixteen_sp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/apply_btn_filter_stores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="50dp"
                android:background="@drawable/bg_submit_btn"
                android:gravity="center"
                android:text="@string/apply_filter"
                android:textColor="@color/whiteColor" />

        </FrameLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>